--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 .DS_Store
 
+# buids
+android/
+ios/
+
 # Xcode
 #
 build/
@@ -72,3 +76,4 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
